--- a/Presentation.tex
+++ b/Presentation.tex
@@ -136,8 +136,8 @@
 		\item Angle is measured using a mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\item Reducing the uncertainty enables higher sensitivity.
-		\item When amplitude is damped under the thermal limit, pendulum's temperature is effectively lowered; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
-		\item Damping lowers the measurement temperature quantum uncertainty.
+		%\item When amplitude is damped under the thermal limit, pendulum's temperature is effectively lowered; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
+		\item Damping lowers the measurement temperature quantum uncertainty, by effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
 
 		
 	\end{itemize}
