--- a/Presentation.tex
+++ b/Presentation.tex
@@ -137,7 +137,7 @@
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\item Reducing the uncertainty enables higher sensitivity.
 		\item Damping effectively lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
-		\item Resulting with a lower temperature quantum uncertainty. 
+		\item Resulting with lower temperature quantum uncertainty. 
 
 		
 	\end{itemize}
@@ -167,8 +167,8 @@
 	\begin{itemize}		
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		\item Two light sources hitting the sides of the pendulum result with a modulated net tourqe.
-		\item Modulation is controlled by the PID feedback.
+		\item Two light sources hitting the sides of the pendulum result with a net tourqe.
+		\item Intensity modulation is controlled by the PID feedback.
 		
 	\end{itemize}
 	\hyperlink{frame:Radiation tourqe 1}{>>} 
