--- a/Presentation.tex
+++ b/Presentation.tex
@@ -167,8 +167,8 @@
 	\begin{itemize}		
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		\item Two light sources hitting the sides of the pendulum result with a net tourqe.
-		\item Intensity modulation is controlled by the PID feedback.
+		\item Two light sources hitting the sides of the pendulum result with a net tourqe, as a function of light power.
+		\item Power modulation is controlled by the PID feedback.
 		
 	\end{itemize}
 	\hyperlink{frame:Radiation tourqe 1}{>>} 
