--- a/Presentation.tex
+++ b/Presentation.tex
@@ -167,7 +167,7 @@
 	\begin{itemize}		
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		\item Two light sources hitting the sides of the pendulum result with a net tourqe, as a function of light power.
+		\item Two light sources hitting the sides of the pendulum result with power-depended net tourqe.
 		\item Power modulation is controlled by the PID feedback.
 		
 	\end{itemize}
