--- a/Presentation.tex
+++ b/Presentation.tex
@@ -210,9 +210,9 @@
 	\begin{itemize}
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
-		\item Angle measured by signal amplifier.
+		\item Tilt angle is measured by signal amplifier.
 		\item PID modulates two LED light sources in real time.
-		\item LED are driven by Arduino controller; using PWM.
+		\item The LED are driven by Arduino controller; using PWM.
 	
 	\end{itemize}
 	
