--- a/Presentation.tex
+++ b/Presentation.tex
@@ -211,7 +211,7 @@
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
 		\item Tilt angle is measured by signal amplifier.
-		\item PID modulates two LED light sources in real time.
+		\item The PID modulates two LED light sources in real-time.
 		\item The LED are driven by Arduino controller; using PWM.
 	
 	\end{itemize}
