--- a/Presentation.tex
+++ b/Presentation.tex
@@ -254,7 +254,7 @@
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams.
-		\item Range of $10000$ steps with frequency of $1 [Hz]$.
+		\item Range of $10000$ steps with modulation frequency of $1 [Hz]$.
 		\item Difference uncertainty minimized; mutual source.
 		\item Output uncertainty large; AOM non linearity, fluctuations.
 	\end{itemize}
