--- a/Presentation.tex
+++ b/Presentation.tex
@@ -254,7 +254,7 @@
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams.
-		\item Range of $10000$ steps with modulation frequency of $1 [Hz]$.
+		\item Modulation range of $10000$ steps with frequency of $1 [Hz]$.
 		\item Difference uncertainty minimized; mutual source.
 		\item Output uncertainty large; AOM non linearity, fluctuations.
 	\end{itemize}
@@ -268,6 +268,7 @@
 	\begin{itemize}		
 		\item LED coupled into a light guide (FOV of $45^0-120^0$).
 		\item Linear response minimizes overshoot; $\tau(t)  \propto [D_1(t) -D_2(t)] $.
+		\item 8-bit modulation range.
 		\item Fast frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
 		
 		
