--- a/Presentation.tex
+++ b/Presentation.tex
@@ -268,7 +268,7 @@
 	\begin{itemize}		
 		\item LED coupled into a light guide (FOV of $45^0-120^0$).
 		\item Linear response minimizes overshoot; $\tau(t)  \propto [D_1(t) -D_2(t)] $.
-		\item Modulation range of 8-bit duty-cycle $D(t)$ .
+		\item Modulation range of 8-bit duty-cycle ($D(t)$).
 		\item Fast frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
 		
 		
