--- a/Presentation.tex
+++ b/Presentation.tex
@@ -343,24 +343,20 @@
 
 
 \section{Summary and conclusion}
-\begin{frame}{Study achievements}
-	\begin{itemize}
-		
-		
-		\item Design a torsional pendulum with active motion damping. 
-		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
-		%\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
-		
-		
-	\end{itemize}
-\end{frame}
+
 
 \begin{frame}{Study contribution}
 	\begin{itemize}
 		\item Improving sensitivity and integration time using active motion damping.
-
-		\item Study contribution; with the right conditions, damping allows cooling up to the Brownian limit. 
+		\item With the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
+		
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Future study}
+	\begin{itemize}
+		
 		\item PID not the best control algorithm; linear approximation. 
 		\item Next stage would have non linear motion approximation.
 		\item Goal of damping beyond room temperature uncertainty. 
