--- a/Presentation.tex
+++ b/Presentation.tex
@@ -657,10 +657,12 @@
 	\begin{center}		
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
-	\begin{itemize}	
-		\item Quality factor describes how damped the oscillator.
+	\begin{itemize}			
+		\item Ratio of  energy stored to energy dissipated per cycle.
+		\item Assuming negligible friction, dissipation is the work.
+		\item The difference of PID work and environment noise power. 
 		\item Ratio of the energy stored to dissipated per cycle.
-		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $.
+		\item Noise and amplitude depended: $Q =  \frac{2\pi\cdot(\frac{\kappa\cdot\theta(t)^2}{2}+\frac{I\cdot\dot{\theta}(t)^2}{2})}{\int_0^T[\tau_{PID}(t)\cdot\dot{\theta}(t) - p]dt} $.
 					
 	\end{itemize}
 	\hyperlink{frame:Quality factor}{<<} 
