--- a/Presentation.tex
+++ b/Presentation.tex
@@ -658,11 +658,9 @@
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
 	\begin{itemize}			
-		\item Ratio of  energy stored to energy dissipated per cycle.
-		\item Assuming negligible friction, dissipation is the work.
-		\item The difference of PID work and environment noise power. 
 		\item Ratio of the energy stored to dissipated per cycle.
-		\item Noise and amplitude depended: $Q =  \frac{2\pi\cdot(\frac{\kappa\cdot\theta(t)^2}{2}+\frac{I\cdot\dot{\theta}(t)^2}{2})}{\int_0^T[\tau_{PID}(t)\cdot\dot{\theta}(t) - p]dt} $
+		\item The difference of PID work and coupled noise power. 
+		\item Noise and amplitude depended: $Q =  \frac{2\pi\cdot(\frac{\kappa\cdot\theta_{max}^2}{2})}{\int_0^T[\tau_{PID}(t)\cdot\dot{\theta}(t) - p]dt} $
 					
 	\end{itemize}
 	\hyperlink{frame:Quality factor}{<<} 
