--- a/Presentation.tex
+++ b/Presentation.tex
@@ -660,7 +660,7 @@
 	\begin{itemize}			
 		\item Ratio of the energy stored to dissipated per cycle.
 		\item The difference of PID work and coupled noise power. 
-		\item Noise and amplitude depended: $Q =  \frac{2\pi\cdot(\frac{\kappa\cdot\theta_{max}^2}{2})}{\int_0^T[\tau_{PID}(t)\cdot\dot{\theta}(t) - p]dt} $
+		\item Noise and amplitude depended: $Q =  \frac{2\pi\cdot(\frac{\kappa\cdot\theta_{max}^2}{2})}{\int_0^T[\tau(t)\cdot\dot{\theta}(t) - p]dt} $
 					
 	\end{itemize}
 	\hyperlink{frame:Quality factor}{<<} 
