--- a/Presentation.tex
+++ b/Presentation.tex
@@ -617,7 +617,7 @@
 
 	
 	\begin{itemize}		
-		
+		\item The surface pressure of a light beam due to momentum exchange.
 		\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
 		
