--- a/TeiPel_En_Beamer_Layout.sty
+++ b/TeiPel_En_Beamer_Layout.sty
@@ -120,7 +120,7 @@
 \newcommand{\supervisor}[2]{
 	\subtitle{\textsc{Thesis}}
 	\logo{\begin{tabular}{c} \includegraphics[height=0.7cm,keepaspectratio]{\teilogopng} \\ \color{teipel_red}\scalebox{1.7}{\insertframenumber/\inserttotalframenumber} \end{tabular}}
-	\institute{\textsc{The Hebrew University of Jerusalem}\\{School of exact science} \\ Department of Applied Physics\\[5pt]{\includegraphics[height=1.5cm,keepaspectratio]{\teilogoeps}}\\[5pt] \scalebox{0.9}{#1: #2}}
+	\institute{\textsc{The Hebrew University of Jerusalem} \\ Department of Applied Physics\\[5pt]{\includegraphics[height=1.5cm,keepaspectratio]{\teilogoeps}}\\[5pt] \scalebox{0.9}{#1: #2}}
 }
 
 \newcommand{\presentationDate}[1]{
