--- a/Presentation.tex
+++ b/Presentation.tex
@@ -75,6 +75,21 @@
 		
 	\end{itemize}
 \end{frame}
+\subsection{Cavendish apparatus}
+
+% frame 4
+\begin{frame}{\hypertarget{frame:Cavendish apparatus}{Cavendish apparatus}}
+	\begin{center}		
+		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+    \end{center}
+	\begin{itemize}
+		\item Apparatus measures the gravitational torque of test mass.
+		\item Mass attracts both masses $m$; creating a net torque $\tau_g$.
+		\item The average equilibrium angle: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
+
+	\end{itemize}
+	\hyperlink{frame:Cavendish apparatus 1}{>>} 
+\end{frame}
 
 % frame 3
 \begin{frame}{\hypertarget{frame:Harmonic oscillator}{Harmonic oscillator}}
@@ -93,19 +108,6 @@
 \end{frame}
 
 
-% frame 4
-\begin{frame}{\hypertarget{frame:Cavendish apparatus}{Cavendish apparatus}}
-	\begin{center}		
-		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
-    \end{center}
-	\begin{itemize}
-		\item Apparatus measures the gravitational torque of test mass.
-		\item Mass attracts both masses $m$; creating a net torque $\tau_g$.
-		\item The average equilibrium angle: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
-
-	\end{itemize}
-	\hyperlink{frame:Cavendish apparatus 1}{>>} 
-\end{frame}
 
 
 \subsection{Noises and damping}
