--- a/Presentation.tex
+++ b/Presentation.tex
@@ -115,8 +115,8 @@
 	\begin{itemize}
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
-		\item Tilt angle is measured by signal amplifier.
-		\item The PID modulates two LED light sources in real-time.
+		\item Pendulum damped by a real-time modulated external tourqe.
+		\item A PID algorithm modulates two LED light sources in real-time.
 		\item The LED are driven by Arduino controller; using PWM.
 	
 	\end{itemize}
