--- a/Presentation.tex
+++ b/Presentation.tex
@@ -154,7 +154,7 @@
 
 \begin{frame}{Previous laser setup}
 	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom1.png}
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams.
