--- a/Presentation.tex
+++ b/Presentation.tex
@@ -116,7 +116,8 @@
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
 		\item Pendulum damped by a modulated external tourqe.
-		\item A PID algorithm modulates two light sources in real-time.
+		\item A PID algorithm modulates LED light sources in real-time.
+		\item The LED are driven by Arduino controller; using PWM.
 	
 	\end{itemize}
 	
@@ -154,7 +155,7 @@
 
 \begin{frame}{Previous laser setup}
 	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom1.png}
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams.
