--- a/Presentation.tex
+++ b/Presentation.tex
@@ -153,15 +153,16 @@
 	
 \end{frame}
 
+
 \begin{frame}{Previous laser setup}
 	\begin{center}		
 		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
 	\end{center}
 	\begin{itemize}		
-		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams.
+		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams with mutual source.
 		\item Modulation range of $10000$ steps with frequency of $1 [Hz]$.
-		\item Difference uncertainty minimized; mutual source.
-		\item Output uncertainty large; AOM non linearity, fluctuations.
+		\item Fluctuations uncertainty minimized; mutual source.
+		\item Output uncertainty large; AOM response non linear.
 	\end{itemize}
 \end{frame}
 
