--- a/Presentation.tex
+++ b/Presentation.tex
@@ -115,9 +115,8 @@
 	\begin{itemize}
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
-		\item Pendulum damped by a modulated external tourqe.
-		\item A PID algorithm modulates LED light sources in real-time.
-		\item The LED are driven by Arduino controller; using PWM.
+		\item Pendulum damped by a modulated radiation pressure tourqe.
+		\item A PID algorithm modulates two light sources in real-time.
 	
 	\end{itemize}
 	
