--- a/Presentation.tex
+++ b/Presentation.tex
@@ -115,7 +115,7 @@
 	\begin{itemize}
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
-		\item Pendulum damped by a modulated radiation pressure tourqe.
+		\item Pendulum damped by external radiation pressure tourqe.
 		\item A PID algorithm modulates two light sources in real-time.
 	
 	\end{itemize}
