--- a/Presentation.tex
+++ b/Presentation.tex
@@ -159,7 +159,10 @@
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams with mutual source.
-		\item Modulation range of $10000$ steps with frequency of $1 [Hz]$.
+
+		\item High modulation range of 13-bit steps.
+		
+		\item Slow frequency causes phase delay; $f \approx 1 [Hz]$.
 		\item Fluctuations uncertainty minimized; mutual source.
 		\item Output uncertainty large; AOM response non linear.
 	\end{itemize}
@@ -173,8 +176,8 @@
 	\begin{itemize}		
 		\item LED coupled into a light guide (FOV of $45^0-120^0$).
 		\item Linear response minimizes overshoot; $\tau(t)  \propto [D_1(t) -D_2(t)] $.
-		\item Modulation range of 8-bit duty-cycle ($D(t)$).
-		\item Fast frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
+		\item Low modulation range of 8-bit duty-cycle.
+		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
 		
 		
 	\end{itemize}
