--- a/Presentation.tex
+++ b/Presentation.tex
@@ -159,12 +159,10 @@
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams with mutual source.
-
 		\item High modulation range of 13-bit steps.
-		
+		\item Output uncertainty large; AOM response non linear.		
 		\item Slow frequency causes phase delay; $f \approx 1 [Hz]$.
-		\item Fluctuations uncertainty minimized; mutual source.
-		\item Output uncertainty large; AOM response non linear.
+		%\item Fluctuations uncertainty minimized; mutual source.
 	\end{itemize}
 \end{frame}
 
