--- a/Presentation.tex
+++ b/Presentation.tex
@@ -186,7 +186,7 @@
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
 	\end{center}
 	\begin{itemize}		
-		\item LED coupled into a light guide (FOV of $45^0-120^0$).
+		\item LED coupled into a light guide; reducing field of view.
 		\item Linear response minimizes overshoot; $\tau(t)  \propto [D_1(t) -D_2(t)] $.
 		\item Low modulation range of 8-bit duty-cycle.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
