--- a/Presentation.tex
+++ b/Presentation.tex
@@ -114,7 +114,7 @@
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		\item Two light sources hitting the sides of the pendulum result with power-depended net tourqe.
-		\item Power modulation is controlled by the PID feedback.
+		\item Power modulation is controlled by a feedback loop.
 		
 	\end{itemize}
 	\hyperlink{frame:Radiation tourqe 1}{>>} 
@@ -241,15 +241,7 @@
 \end{frame}
 
 
-
-
-
-
-
-
-
 \subsection{Noises}
-
 % frame 1
 \begin{frame}{\hypertarget{frame:Environmental noises}{Environmental noises}}
 	\begin{center}		
