--- a/Presentation.tex
+++ b/Presentation.tex
@@ -188,7 +188,7 @@
 	\begin{itemize}		
 		\item LED coupled into a light guide; reducing field of view.
 		\item Low modulation range of 8-bit steps.
-		\item Low output uncertainty; PWM response linear.		
+		\item Small output uncertainty; PWM response linear.		
 		\item Linear response minimizes overshoot; $\tau(t)  \propto [D_1(t) -D_2(t)] $.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
 		
