--- a/Presentation.tex
+++ b/Presentation.tex
@@ -177,7 +177,7 @@
     \end{center}
 	\begin{itemize}	
 		\item PID controller is a feedback based control system, for time continuous control of a process (damped motion).
-		\item The control is a weighted sum of proportional, integral and derivative response to error (P-I-D).
+		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
 		\item Feedback applies an external correction to the process: $\tau(t)$.	
 	\end{itemize}
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
