--- a/Presentation.tex
+++ b/Presentation.tex
@@ -98,7 +98,7 @@
 	\begin{itemize}
 
 		\item Undamped oscillator; harmonic oscillations without decay.
-		\item Damped oscillator; there is a damping torque $\tau = -b\dot{\theta}$.
+		\item Damped oscillator; there is a damping torque $\tau = \gamma\dot{\theta}(t)$.
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 		
 	\end{itemize}
@@ -187,7 +187,7 @@
 
 % frame 3
 
-\begin{frame}{Damped oscillator}
+\begin{frame}{Damped motion}
 	\begin{center}		
 		\includegraphics[width=0.65\textwidth,keepaspectratio]{underdamp.png}
 	\end{center}
