--- a/Presentation.tex
+++ b/Presentation.tex
@@ -224,7 +224,7 @@
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams with mutual source.
-		\item High modulation range of 13-bit steps.
+		\item High modulation range of 13-bit.
 		\item Large output uncertainty; AOM response non linear.		
 		\item Slow frequency causes phase delay; $f \approx 1 [Hz]$.
 		%\item Fluctuations uncertainty minimized; mutual source.
@@ -238,7 +238,7 @@
 	\end{center}
 	\begin{itemize}		
 		\item LED coupled into a light guide; reducing field of view.
-		\item Low modulation range of 8-bit steps.
+		\item Low modulation range of 8-bit.
 		\item Small output uncertainty; PWM response linear.		
 		\item Linear response minimizes overshoot; $\tau(t)  \propto [D_1(t) -D_2(t)] $.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
