--- a/Presentation.tex
+++ b/Presentation.tex
@@ -225,7 +225,7 @@
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams with mutual source.
 		\item High modulation range of 13-bit.
-		\item Non Linear response results with uncertainty and overshoot.
+		\item Non linear response results with uncertainty and overshoot.
 		\item Slow frequency causes phase delay; $f \approx 1 [Hz]$.
 		%\item Fluctuations uncertainty minimized; mutual source.
 	\end{itemize}
