--- a/Presentation.tex
+++ b/Presentation.tex
@@ -255,8 +255,8 @@
 	\end{center}
 	\begin{itemize}	
 		
-		\item Amplitude-depended damping; damping accelerates as amplitude is getting smaller.
-		\item Damping time of $3700[s]$ for $ 60 [\mu rad] \rightarrow 10[\mu rad] $, compared to $250[s]$ to reach $ 0.2[\mu rad]$.
+		\item Damping accelerates as amplitude is getting smaller.
+		\item Damping time of $3700[s]$ to damp from $ 60 [\mu rad]$ to $ 10[\mu rad] $, compared to $250[s]$ to reach $ 0.2[\mu rad]$.
 						
 	\end{itemize}
 \end{frame}
