--- a/Presentation.tex
+++ b/Presentation.tex
@@ -257,7 +257,8 @@
 		
 		\item Damping accelerates as amplitude is getting smaller.
 		\item Damping time of $3700[s]$ to damp  $ 60 [\mu rad] \rightarrow 10[\mu rad] $.
-		\item compared to $250[s]$ to reach $ 0.2[\mu rad]$.
+		\item Damping time of $250[s]$ to damp  $ 10 [\mu rad] \rightarrow 0.2[\mu rad] $.
+
 						
 	\end{itemize}
 \end{frame}
