--- a/Presentation.tex
+++ b/Presentation.tex
@@ -167,7 +167,7 @@
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		\item Two light sources hitting the sides of the pendulum result with power-depended net tourqe.
-		\item Power modulation is controlled by a feedback loop.
+		\item Power modulation is controlled by a PID feedback loop.
 		
 	\end{itemize}
 	\hyperlink{frame:Radiation tourqe 1}{>>} 
