--- a/Presentation.tex
+++ b/Presentation.tex
@@ -250,7 +250,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{\hypertarget{frame:LED PWM circuit}{LED PWM circuit}}
+\begin{frame}{\hypertarget{frame:LED PWM setup}{LED PWM setup}}
 
 	\begin{center}		
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
@@ -263,7 +263,7 @@
 		
 		
 	\end{itemize}
-	\hyperlink{frame:LED PWM circuit 1}{>>} 
+	\hyperlink{frame:LED PWM setup 1}{>>} 
 \end{frame}
 
 
@@ -653,7 +653,7 @@
 \end{frame}
 
 
-\begin{frame}{\hypertarget{frame:LED PWM circuit 1}{LED PWM circuit}}
+\begin{frame}{\hypertarget{frame:LED PWM setup 1}{LED PWM setup}}
 	\framesubtitle{Arduino microcontroller}
 	\begin{center}		
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
@@ -664,7 +664,7 @@
 		\item Analog signal depended on duty-cycle: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
 		\item Modulation limited by clock frequency: $f_{PWM} \approx 500[Hz]$.
 	\end{itemize}
-	\hyperlink{frame:LED PWM circuit}{<<} 
+	\hyperlink{frame:LED PWM setup}{<<} 
 \end{frame}
 
 \begin{frame}{\hypertarget{frame:Quality factor 1}{Quality factor}}
