--- a/Presentation.tex
+++ b/Presentation.tex
@@ -286,7 +286,7 @@
 		\includegraphics[width=0.7\textwidth,keepaspectratio]{measured oscillation angle1.png}
 	\end{center}
 	\begin{itemize}	
-		\item PID is able to damp up to an amplitude of $0.05[\mu rad]$.
+		\item Setup able to damp up to an amplitude of $0.05[\mu rad]$.
 		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$.	
 		
 						
