--- a/Presentation.tex
+++ b/Presentation.tex
@@ -115,7 +115,7 @@
 		
 		\item Angle is measured using a mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
-		\item $\frac{M}{r_0^3} \approx \frac{\overline{\theta}\pm \delta\theta}{\frac{3GT^2cos\theta sin\theta}{4\pi^2 }} \approx 5\cdot 10^{7}\cdot \overline{\theta}\pm 5\cdot 10^{7}\cdot \theta_{max}^{PID}$
+		\item $\frac{M}{r_0^3} \propto \overline{\theta}_g\pm \delta\theta \approx 5\cdot 10^{7}\cdot \overline{\theta}\pm 5\cdot 10^{7}\cdot \theta_{max}^{PID}$
 
 		\item Reducing the uncertainty enables higher sensitivity.
 		\item Damping effectively lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
