--- a/Presentation.tex
+++ b/Presentation.tex
@@ -115,9 +115,7 @@
 		
 		\item Angle is measured using a mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
-		\item $\frac{M}{r_0^3} \propto \overline{\theta}_g\pm \delta\theta \propto \overline{\theta}_g\pm \theta_{damped}$
-
-		\item Reducing the uncertainty by damping enables higher sensitivity;
+		\item Reducing the uncertainty by damping enables higher sensitivity; $\frac{M}{r_0^3} \propto \overline{\theta}_g\pm \delta\theta \propto \overline{\theta}_g\pm \theta_{damped}$.
 		\item Damping effectively lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
 		\item Resulting with lower temperature quantum uncertainty. 
 
