--- a/Presentation.tex
+++ b/Presentation.tex
@@ -115,7 +115,7 @@
 		
 		\item Angle is measured using a mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
-		\item Reducing the uncertainty by damping enables higher sensitivity; $\frac{M}{r_0^3} \propto \overline{\theta}_g\pm \delta\theta \propto \overline{\theta}_g\pm \theta_{damped}$.
+		\item Reducing the uncertainty by damping enables higher sensitivity; $\frac{M}{r_0^3} \propto [\overline{\theta}_g\pm \delta\theta] \propto [\overline{\theta}_g\pm \theta_{damped}]$.
 		\item Damping effectively lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
 		\item Resulting with lower temperature quantum uncertainty. 
 
@@ -131,8 +131,7 @@
 			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
 	\end{center}
 	\begin{itemize}
-
-		\item Torsional pendulum is placed inside a vacuum chamber.
+		\item Torsional pendulum is placed inside a vacuum chamber and acoustic box; reducing Environmental noises.
 		\item A PID algorithm modulates two light sources in real-time.
 		\item Pendulum damped by external radiation pressure tourqe.
 	
@@ -306,7 +305,6 @@
 		\item Environment gas cause pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Environmental black body radiation energy.
 		\item Unknown Magnetic noise from the setup electronics.
-		\item System placed inside a vacuum chamber and acoustic box. 
 			
 	\end{itemize}
 	\hyperlink{frame:Environmental noises 1}{>>} 
