--- a/Presentation.tex
+++ b/Presentation.tex
@@ -131,7 +131,7 @@
 			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
 	\end{center}
 	\begin{itemize}
-		\item Torsional pendulum is placed inside a vacuum chamber and acoustic box; reducing Environmental noises.
+		\item Torsional pendulum is placed inside a vacuum chamber and acoustic box; reducing environmental noises.
 		\item A PID algorithm modulates two light sources in real-time.
 		\item Pendulum damped by external radiation pressure tourqe.
 	
@@ -212,7 +212,7 @@
 	\end{center}
 	\begin{itemize}		
 		\item PID mainly acts as friction, gradually slowing velocity.
-		\item $\tau(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
+		\item $\tau(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau}{\theta}\cdot \frac{ T}{2\pi} $
 		\item Overshoot or slow response; result with driven oscillator.
 		\item Torque small compared to amplitude; negligible damping. 
 		
