--- a/Presentation.tex
+++ b/Presentation.tex
@@ -318,9 +318,9 @@
 	\end{center}
 	\begin{itemize}	
 		\item Quality factor describes how damped the oscillator.
-		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $.
+		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item When $Q<0$; coupled noise larger than damping.
-		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta_{max}^{PID}\pi\tau_{max}}{T}$. 				
+		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta^{PID}\pi\tau}{T}$. 				
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
 \end{frame}
