--- a/Presentation.tex
+++ b/Presentation.tex
@@ -335,7 +335,7 @@
 		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
 		\item Only net collision power affects the motion uncertainty.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
-		\item Noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
+		\item Coupled noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
 					
 	\end{itemize}
 	\hyperlink{frame:Effective noise 1}{>>} 
