--- a/Presentation.tex
+++ b/Presentation.tex
@@ -320,7 +320,8 @@
 		\item Quality factor describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item When $Q<0$; coupled noise larger than damping.
-		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta^{PID}\pi\tau}{T}$. 				
+		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta^{PID}\pi\tau}{T}$. 
+		\item Estimated noise smaller than calculated noises.				
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
 \end{frame}
@@ -332,7 +333,7 @@
 
 
 	\begin{itemize}	
-		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
+		
 		\item Only net collision power affects the motion uncertainty.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
 		\item Coupled noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
