--- a/Presentation.tex
+++ b/Presentation.tex
@@ -351,7 +351,7 @@
 	
 	\begin{itemize}	 
 		\item Amplitude is limited by Brownian motion uncertainty.
-		\item Might allow to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
+		\item Might allow to damp down to $\theta_{PID}\approx 2\cdot 10^{-14}$.
 		\item Achieved if damping lowers temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 		\item Resolution limit is proportional to the damped amplitude. 				
 				
