--- a/Presentation.tex
+++ b/Presentation.tex
@@ -35,7 +35,7 @@
 	% supervisor	
 		\supervisor{Supervisor}{Professor John Howell}
 	% date
-		\presentationDate{March, 2021}
+		\presentationDate{May, 2021}
 
 
 \begin{document}
@@ -353,7 +353,8 @@
 		\item Amplitude is limited by Brownian motion uncertainty.
 		\item Might allow to damp down to $\theta_{PID}\approx 2\cdot 10^{-14}$.
 		\item Achieved if damping lowers temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$.
-		\item Resolution limit is proportional to the damped amplitude. 				
+		\item Resolution limit is proportional to the damped amplitude. 	
+		\item Reducing the uncertainty by damping enables higher sensitivity; $\frac{M}{r_0^3} \propto [\overline{\theta}_g\pm \delta\theta] \propto [\overline{\theta}_g\pm \theta_{damped}]$.			
 				
 	\end{itemize}
 \end{frame}
