--- a/Presentation.tex
+++ b/Presentation.tex
@@ -129,7 +129,7 @@
 			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
 	\end{center}
 	\begin{itemize}
-		\item Torsional pendulum is placed inside a vacuum chamber and acoustic box; reducing environmental noises.
+		\item Torsional pendulum is placed inside a vacuum chamber and an acoustic box; reducing environmental coupled noises.
 		\item A PID algorithm modulates two light sources in real-time.
 		\item Pendulum damped by external radiation pressure tourqe.
 	
