--- a/Presentation.tex
+++ b/Presentation.tex
@@ -143,8 +143,8 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{chamber_front_names.PNG}
 	\end{center}
 	\begin{itemize}
-		\item Chamber with transparent windows through light guides.
-		\item Measurements conducted with vacuum engine off.
+		\item Chamber is with transparent windows through light guides.
+		\item Measurements is conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage, outgassing.
 		\item Chosen materials minimize magnetic noise and outgassing.
 
