--- a/Presentation.tex
+++ b/Presentation.tex
@@ -161,10 +161,11 @@
 	\begin{itemize}
 		\item Held by an adjustable mount; for accurate location. 
 		\item Front mirror stabilized by a balancing mass.
-		\item The average equilibrium angle: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.		
 		\item Chosen dimensions aim achieving small $\kappa$ with large $T$.
 		\item Measured: $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
 	\end{itemize}
+	\hyperlink{frame:Cavendish apparatus}{<<} 
+
 	
 \end{frame}
 
