--- a/Presentation.tex
+++ b/Presentation.tex
@@ -225,7 +225,7 @@
 	\begin{itemize}
 		
 		\item Introducing a new mass changes equilibrium into $\theta_g(t)$. 
-		\item The PID is compensating for the new error; response becomes mainly an inverse torque: $\tau_{PID}(t) \approx K_P\theta_g(t)$. 
+		\item Since motion is damped; PID response is mainly an inverse torque: $\tau_{PID}(t) \approx K_P\theta_g(t)$. 
 		\item When integrating over short periods: $\overline{\theta}_g =  \frac{\int \tau_{PID}(t) dt}{ K_P \Delta t} $. 	
 		\item Result with lower uncertainty and short integration time.
 	\end{itemize}
