--- a/Presentation.tex
+++ b/Presentation.tex
@@ -226,7 +226,7 @@
 		
 		\item Introducing a new mass changes equilibrium into $\theta_g(t)$. 
 		\item Since motion is damped; PID response is an inverse torque. 
-		\item When integrating over short periods: $\overline{\theta}_g =  \frac{\int \tau_{PID}(t) dt}{ K_P \Delta t} $. 	
+		\item When integrating over short periods: $\overline{\theta}_g =  \frac{\int \tau(t) dt}{ K_P \Delta t} $. 	
 		\item Result with lower uncertainty and short integration time.
 	\end{itemize}
 \end{frame}
@@ -303,7 +303,7 @@
 		\item Quality factor describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item When $Q<0$; coupled noise larger than damping.
-		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta^{PID}\pi\tau}{T}$. 
+		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
 \end{frame}
