--- a/Presentation.tex
+++ b/Presentation.tex
@@ -302,7 +302,7 @@
 	\begin{itemize}	
 		\item Quality factor describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
-		\item When $Q<0$; coupled noise larger than damping.
+		\item When $Q<0$; coupled noise larger than damping process.
 		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
