--- a/Presentation.tex
+++ b/Presentation.tex
@@ -350,8 +350,8 @@
 \begin{frame}{Resolution limit}
 	
 	\begin{itemize}	 
-		\item Amplitude is limited by Brownian motion uncertainty.
-		\item Might allow to damp down to $\theta_{PID}\approx 2\cdot 10^{-14}$.
+		\item Amplitude is limited by Brownian motion uncertainty of $p=6.2\mu W$.
+		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (Q factor).
 		\item Achieved if damping lowers temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 		\item Resolution limit is proportional to the damped amplitude. 	
 		\item Reducing the uncertainty by damping enables higher sensitivity; $\frac{M}{r_0^3} \propto [\overline{\theta}_g\pm \delta\theta] \propto [\overline{\theta}_g\pm \theta_{damped}]$.			
