--- a/Presentation.tex
+++ b/Presentation.tex
@@ -350,7 +350,7 @@
 \begin{frame}{Resolution limit}
 	
 	\begin{itemize}	 
-		\item Amplitude is limited by Brownian uncertainty of $p=6.2\mu W$.
+		\item Amplitude limited by Brownian uncertainty of $p=6.2\mu W$.
 		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (Q factor).
 		\item Achieved if damping lowers temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 		\item Resolution limit is proportional to the damped amplitude. 	
