--- a/Presentation.tex
+++ b/Presentation.tex
@@ -351,10 +351,10 @@
 	
 	\begin{itemize}	 
 		\item Amplitude limited by Brownian uncertainty of $p=6.2\mu W$.
-		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (Q factor).
+		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (from Q factor).
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 		\item Resolution limit is proportional to the damped amplitude. 	
-		\item $\frac{M}{r_0^3} \propto [\overline{\theta}_g\pm \delta\theta] \propto [\overline{\theta}_g\pm \theta_]$.			
+		\item $\frac{M}{r_0^3} \propto [\overline{\theta}_g\pm \delta\theta] \propto [\overline{\theta}_g\pm \theta]$.			
 				
 	\end{itemize}
 \end{frame}
