--- a/Presentation.tex
+++ b/Presentation.tex
@@ -366,7 +366,7 @@
 	\begin{itemize}
 		\item Improving sensitivity and integration time using active motion damping.
 		\item With the right conditions, damping allows cooling up to the Brownian limit. 
-		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
+		\item Possibility of achieving higher gravimetric measurement sensitivity than current state of the art.
 		
 	\end{itemize}
 \end{frame}
