--- a/Presentation.tex
+++ b/Presentation.tex
@@ -254,7 +254,7 @@
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
 	\end{center}
 	\begin{itemize}		
-		\item LED coupled into a light guide; reducing field of view.
+		\item LED driven by a PWM circuit using an Arduino controller and coupled into a light guide reducing field of view.
 		\item Low modulation range of 8-bit.
 		\item Linear response minimizes overshoot.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
