--- a/Presentation.tex
+++ b/Presentation.tex
@@ -266,7 +266,7 @@
 
 
 \subsection{Results}
-\begin{frame}{Damping}
+\begin{frame}{Damping result}
 	\begin{center}		
 		\includegraphics[width=0.7\textwidth,keepaspectratio]{measured oscillation angle.png}
 	\end{center}
