--- a/Presentation.tex
+++ b/Presentation.tex
@@ -285,7 +285,7 @@
 	\end{center}
 	\begin{itemize}	
 		\item Setup able to damp up to an amplitude of $0.05[\mu rad]$.
-		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$.	
+		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; which enables reducing uncertainty further more by time integration.	
 		
 						
 	\end{itemize}
