--- a/Presentation.tex
+++ b/Presentation.tex
@@ -319,7 +319,7 @@
 		\item Environment gas cause pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Environmental black body radiation energy.
 		\item Unknown Magnetic noise from the setup electronics.
-		\item Estimated noise smaller than calculated noises.				
+		\item Estimated noise much smaller than calculated noise.				
 
 			
 	\end{itemize}
