--- a/Presentation.tex
+++ b/Presentation.tex
@@ -124,6 +124,7 @@
 \section{Methods and results}
 \subsection{System structure}
 % frame 1
+
 \begin{frame}{Experiment setup}
 	\begin{center}		
 			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
@@ -237,7 +238,7 @@
 
 \begin{frame}{Previous laser setup}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{aom.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{aom2.png}
 	\end{center}
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams with mutual source.
