--- a/Presentation.tex
+++ b/Presentation.tex
@@ -252,7 +252,7 @@
 \begin{frame}{\hypertarget{frame:LED PWM setup}{LED PWM setup}}
 
 	\begin{center}		
-		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
+		\includegraphics[width=0.55\textwidth,keepaspectratio]{led_setup.png}
 	\end{center}
 	\begin{itemize}		
 		\item LED driven by a PWM circuit using an Arduino controller and coupled into a light guide reducing field of view.
