--- a/Presentation.tex
+++ b/Presentation.tex
@@ -56,6 +56,7 @@
 	\begin{itemize}
 		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ .
 		\item Since the gravitational constant is small, the force is weak.
+		\item Due to measured mass movement there is energy spectral density.
 		\item High sensitivity is a significant challenge at low frequencies.
 		\end{itemize}
 \end{frame}
@@ -81,7 +82,7 @@
     \end{center}
 	\begin{itemize}
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
-		\item Apparatus measures the gravitational torque of test mass.
+		\item Apparatus measures the gravitational torque of test mass, with .
 		\item Mass attracts both masses $m$; creating a net torque $\tau_g$.
 		\item The average equilibrium angle: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
