--- a/Presentation.tex
+++ b/Presentation.tex
@@ -56,8 +56,7 @@
 	\begin{itemize}
 		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ .
 		\item Since the gravitational constant is small, the force is weak.
-		\item Due to measured mass movement there is energy spectral density.
-		\item High sensitivity is a significant challenge at low frequencies.
+		\item High sensitivity is a significant challenge.
 		\end{itemize}
 \end{frame}
 
@@ -82,7 +81,7 @@
     \end{center}
 	\begin{itemize}
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
-		\item Apparatus measures the gravitational torque of test mass, with .
+		\item Apparatus measures the gravitational torque of test mass, with low .
 		\item Mass attracts both masses $m$; creating a net torque $\tau_g$.
 		\item The average equilibrium angle: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
@@ -135,7 +134,7 @@
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		\item Two light sources hitting the sides of the pendulum result with power-depended net tourqe.
-		\item Power modulation is controlled by a PID feedback loop.
+		\item Power modulation is controlled by a feedback loop.
 		
 	\end{itemize}
 	\hyperlink{frame:Radiation tourqe 1}{>>} 
@@ -370,6 +369,20 @@
 		\item With the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Possibility of achieving higher gravimetric measurement sensitivity than current state of the art.
 		
+	\end{itemize}
+\end{frame}
+
+
+
+Competitive method
+
+\begin{frame}{Competitive method}
+	\begin{itemize}
+		
+		\item Torsional pendulum placed in high vacuum.
+		\item Optical measurement of angular deflection. 
+		\item Measured test masses down to 90 mg around modulation frequency $f = 12.7 mHz$.
+		\item Results were published in Nature at march 2021.
 	\end{itemize}
 \end{frame}
 
