--- a/Presentation.tex
+++ b/Presentation.tex
@@ -377,6 +377,10 @@
 Competitive method
 
 \begin{frame}{Competitive method}
+\begin{center}		
+		\includegraphics[width=0.3\textwidth,keepaspectratio]{nature.PNG}
+	\end{center}
+
 	\begin{itemize}
 		
 		\item Torsional pendulum placed in high vacuum.
