--- a/Presentation.tex
+++ b/Presentation.tex
@@ -383,9 +383,9 @@ Competitive method
 
 	\begin{itemize}
 		
-		\item Torsional pendulum placed in high vacuum.
+		\item Torsional pendulum placed inside high vacuum.
 		\item Optical measurement of angular deflection. 
-		\item Measured test masses down to 90 mg around modulation frequency $f = 12.7 mHz$.
+		\item Measured test masses down to 90 mg around modulation band of $f = 12.7 [mHz]$.
 		\item Results were published in Nature at march 2021.
 	\end{itemize}
 \end{frame}
