--- a/Presentation.tex
+++ b/Presentation.tex
@@ -385,7 +385,7 @@ Competitive method
 		
 		\item Torsional pendulum placed inside high vacuum.
 		\item Optical measurement of angular deflection. 
-		\item Measured test masses down to 90 mg around modulation band of $f = 12.7 [mHz]$.
+		\item Measured down to $m = 90 [mg]$ around modulation band of $f = 12.7 [mHz]$.
 		\item Results were published in Nature at march 2021.
 	\end{itemize}
 \end{frame}
