--- a/Presentation.tex
+++ b/Presentation.tex
@@ -382,11 +382,11 @@ Competitive method
 	\end{center}
 
 	\begin{itemize}
-		
-		\item Torsional pendulum placed inside high vacuum.
+		\item Results were published in Nature at march 2021.
+
+		\item A torsional pendulum placed inside high vacuum and faraday shield.
 		\item Optical measurement of angular deflection. 
 		\item Measured down to $m = 90 [mg]$ around modulation band of $f = 12.7 [mHz]$.
-		\item Results were published in Nature at march 2021.
 	\end{itemize}
 \end{frame}
 
