--- a/Presentation.tex
+++ b/Presentation.tex
@@ -384,7 +384,7 @@ Competitive method
 	\begin{itemize}
 		\item Results were published in Nature at march 2021.
 
-		\item A torsional pendulum placed inside high vacuum and faraday shield, with optical measurement of angular deflection.
+		\item Torsional pendulum placed inside high vacuum and faraday shield, with optical measurement of angular deflection.
 		\item Measured down to $m = 90 [mg]$ around modulation band of $f = 12.7 [mHz]$.
 	\end{itemize}
 \end{frame}
