--- a/Presentation.tex
+++ b/Presentation.tex
@@ -384,8 +384,9 @@ Competitive method
 	\begin{itemize}
 		\item Results were published in Nature at march 2021.
 
-		\item Torsional pendulum placed inside high vacuum and faraday shield, with optical measurement of angular deflection.
-		\item Measured down to $m = 90 [mg]$ around modulation band of $f = 12.7 [mHz]$.
+		\item Torsional pendulum placed inside high vacuum and a faraday shield, with optical measurement of angular deflection.
+		\item Measured down to $m = 90 [mg]$ at a low frequency band of $f = 12.7 [mHz]$.
+		\item mesurements conducted in modulation band of $f = 12.7 [mHz]$, preventing high frequency coupling.
 	\end{itemize}
 \end{frame}
 
