--- a/Presentation.tex
+++ b/Presentation.tex
@@ -385,7 +385,7 @@ Competitive method
 		\item Results were published in Nature at march 2021.
 
 		\item Torsional pendulum placed inside high vacuum and a faraday shield, with optical measurement of angular deflection.
-		\item Measured down to $m = 90 [mg]$ at a low frequency band of $f = 12.7 [mHz]$.
+		\item Measured down to $m = 90 [mg]$ at modulation band of $f = 12.7 [mHz]$.
 		\item mesurements conducted in modulation band of $f = 12.7 [mHz]$, preventing high frequency coupling.
 	\end{itemize}
 \end{frame}
