--- a/Presentation.tex
+++ b/Presentation.tex
@@ -384,8 +384,8 @@ Competitive method
 	\begin{itemize}
 		\item Results were published in Nature at march 2021.
 
-		\item Torsional pendulum placed inside high vacuum and a faraday shield, with optical measurement of deflection.
-		\item Measured down to $90 [mg]$ at modulation band of $12.7 [mHz]$, preventing high frequency coupling
+		\item Torsional pendulum placed inside vacuum and a faraday shield, with optical measurement of optical deflection.
+		\item Measured down to $90 [mg]$ at modulation band of $12.7 [mHz]$, preventing high frequency nonlinear coupling.
 		
 	\end{itemize}
 \end{frame}
