--- a/Presentation.tex
+++ b/Presentation.tex
@@ -56,7 +56,7 @@
 	\begin{itemize}
 		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ .
 		\item Since the gravitational constant is small, the force is weak.
-		\item Mass movement results with energy spectral density.
+		\item Mass vibrations results with energy spectral density.
 		\item High sensitivity is a significant challenge at low frequencies.
 		\end{itemize}
 \end{frame}
