--- a/Presentation.tex
+++ b/Presentation.tex
@@ -68,9 +68,11 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
+		\item Interference fringe changes due to free fall in one arm; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
 		\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Atom interferometer; sensitivity of 500 femto-g after one hour of integration.
+		\item Superconducting sphere suspended in the field of a superconducting coil; sensitivity of 1 $\frac{nano-g}{\sqrt{Hz}}$ after one year of integration
+
 		
 	\end{itemize}
 \end{frame}
