--- a/Presentation.tex
+++ b/Presentation.tex
@@ -69,9 +69,9 @@
 	\begin{itemize}
 
 		\item Interference fringe changes due to free fall in one arm; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
-		\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
-		\item Atom interferometer; sensitivity of 500 femto-g after one hour of integration.
+		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Superconducting sphere suspended in the field of a superconducting coil; sensitivity of 1 $\frac{nano-g}{\sqrt{Hz}}$ after one year of integration
+		\item Atom interferometer; sensitivity of 500 femto-g after one hour of integration.
 
 		
 	\end{itemize}
