--- a/Presentation.tex
+++ b/Presentation.tex
@@ -70,7 +70,7 @@
 
 		\item Interference fringe changes due to free fall in one arm; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
-		\item Superconducting sphere suspended in a magnetic field; sensitivity of 1 $\frac{nano-g}{\sqrt{Hz}}$ after a year of integration
+		\item Superconducting sphere suspended in a field of a superconducting coil; sensitivity of 1 $\frac{nano-g}{\sqrt{Hz}}$ after a year of integration
 		\item Atom interferometer; sensitivity of 500 femto-g after one hour of integration.
 
 		
