--- a/Presentation.tex
+++ b/Presentation.tex
@@ -71,7 +71,7 @@
 		\item Interference fringe changes due to corner cube free fall in one arm; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Superconducting sphere suspended in a superconducting coil field; sensitivity of 1 $\frac{nano-g}{\sqrt{Hz}}$ after a year of integration
-		\item Atomic interferometer acquired phase from gravitational field; sensitivity of 500 femto-g after one hour of integration.
+		\item Atomic interferometer acquired phase from gravitational field; sensitivity of 500 $femto-g$ after one hour of integration.
 
 		
 	\end{itemize}
