--- a/Presentation.tex
+++ b/Presentation.tex
@@ -148,7 +148,7 @@
 	\end{center}
 	\begin{itemize}
 		\item Torsional pendulum is placed inside a vacuum chamber and an acoustic box; reducing environmental coupled noises.
-		\item A PID algorithm modulates two light sources in real-time.
+		\item Tilt angle Measured by a mirror using a laser, a PID feedback algorithm modulates two light sources in real-time.
 		\item Pendulum damped by external radiation pressure tourqe.
 	
 	\end{itemize}
