--- a/Presentation.tex
+++ b/Presentation.tex
@@ -148,8 +148,7 @@
 	\end{center}
 	\begin{itemize}
 		\item Torsional pendulum is placed inside a vacuum chamber and an acoustic box; reducing environmental coupled noises.
-		\item Tilt angle Measured by a mirror using a laser.
-		\item A PID feedback algorithm modulates two light sources in real-time.
+		\item A PID feedback algorithm modulates two light sources in real-time; tilt angle measured with a laser hitting a mirror.
 		\item Pendulum damped by external radiation pressure tourqe.
 	
 	\end{itemize}
