--- a/Presentation.tex
+++ b/Presentation.tex
@@ -158,13 +158,14 @@
 % frame 3
 \begin{frame}{Vacuum chamber}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{chamber_front_names.PNG}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}
-		\item Chamber is with transparent windows through light guides.
 		\item Measurements is conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage, outgassing.
 		\item Chosen materials minimize magnetic noise and outgassing.
+		\item Chamber is with transparent windows through light guides.
+
 
 		
 	\end{itemize}	
@@ -377,7 +378,6 @@
 
 
 
-Competitive method
 
 \begin{frame}{Competitive method}
 \begin{center}		
